Bug 515575: [BPMN] tasks icons overlap label   merge from papyrus/streams/2.0-maintenance b460fbae9

--- a/org.eclipse.papyrus.bpmn.diagram.common/css/style.css
+++ b/org.eclipse.papyrus.bpmn.diagram.common/css/style.css
@@ -29,6 +29,14 @@ OpaqueAction > Compartment[kind="symbol"] {
     visible:false;
 }
 
+StructuredActivityNode > Compartment[kind="symbol"]{
+	visible: false;
+}
+
+ActivityParameterNode  Compartment[kind="symbol"]{
+	visible: false;
+}
+
 * > Compartment[kind="symbol"] {
     visible:true;    
 }
